Fix the dash table issue of column overflowing the page borders

--- a/report/assets/styles.css
+++ b/report/assets/styles.css
@@ -243,7 +243,7 @@ h4 {
 
   .tableplay {
     page-break-inside:avoid;
-    font-size: 10pt;
+    font-size: 9pt;
     margin-top:1cm;
     margin-bottom: 1cm;
     margin-left:1cm;
